Cambios en login

--- a/PL/Views/Home/Index.cshtml
+++ b/PL/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <br />
+    <h1 class="display-4" style="font-weight: bold;">Biblioteca Anáhuac</h1>
+    <br />
+    <br />
+    <img src="https://www.anahuac.mx/mexico/sites/default/files/inline-images/logo.png" style="height:150px; width:500px;"/>
 </div>
