--- a/PL/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,12 +4,13 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+@* <h1>@ViewData["Title"]</h1> *@
 
 <div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+    <div class="wrapper">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-signin">
+            <h2 style="text-align:center">Registrarse</h2>
+            <h6 style="text-align:center">Crear una nueva cuenta</h6>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -27,10 +28,10 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registrar</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+@*     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
             <hr />
@@ -59,8 +60,30 @@
                 }
             }
         </section>
-    </div>
+    </div> *@
 </div>
+
+<style>
+
+    .wrapper {
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+
+    .form-signin {
+        max-width: 380px;
+        padding: 15px 35px 45px;
+        margin: 0 auto;
+        background-color: #fff;
+        border: 1px solid rgba(0,0,0,0.1);
+    }
+
+    .btn {
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+    }
+</style>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
