--- a/PL/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/PL/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,23 +1,25 @@
 ﻿@page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Confirmación de Correo";
 }
 
 <h1>@ViewData["Title"]</h1>
+<br />
+<br />
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
+<h5>
+            Hemos enviado un correo a la cuenta registrada para que primero la validez y asi puedas iniciar sesión.
+            <a href="https://www.google.com/intl/es-419/gmail/about/">Pulsar para ir a Gmail</a>
+</h5>
     }
     else
     {
-<p>
+<h5>
         Please check your email to confirm your account.
-</p>
+</h5>
     }
 }
 
