--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" asp-area="" asp-controller="Rol" asp-action="GetAll">Roles</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-area="" asp-controller="Editorial" asp-action="GetAll">Editoriales</a>
+                        </li>
                     </ul>
                     @*  @if (signInMannager.IsSignedIn(User))
                     {
