--- a/PL/Views/Autor/GetAll.cshtml
+++ b/PL/Views/Autor/GetAll.cshtml
@@ -7,10 +7,19 @@
 
 
 <div class="text-center m-2">
-    <h1>Usuarios</h1>
+    <h1>Autores</h1>
     <hr />
-    <a class="btn btn-success" href="@Url.Action("Form", "Usuario")"> Agregar Usuario </a>
+    <a class="btn btn-success" href="@Url.Action("Form", "Autor")"> Agregar Autor </a>
 </div>
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 @if (Model.Autores != null && Model.Autores.Count > 0)
 {
     <div class="table-responsive">
@@ -30,9 +39,10 @@
 
                     <tr class="align-middle">
                         <td class="text-center">
-                            <a class="btn" href="@Url.Action("Form", "Usuario", new{idUsuario = usuario.IdAutor})">
-                                <i class="fa-solid fa-pen-to-square fa-lg" style="font-size: 1.7rem; color: #000000;"></i>
-                            </a>
+                            <a class="btn btn-info bi bi-pencil" href="@Url.Action("Form", "Autor", new { IdAutor= usuario.IdAutor})" ></a>
+                           @* <a class="btn" href="@Url.Action("Form", "Autor", new{IdAutor = usuario.IdAutor})">
+                                <i class="fa-solid fa-pen-to-square fa-lg" style="font-size: 1.7rem; color: #000000;">Editar</i>
+                    </a>*@
                         </td>
                         <td class="text-center">@usuario.Nombre @usuario.ApellidoPaterno @usuario.ApellidoMaterno</td>
                         <td class="text-center">@usuario.FechaNacimiento</td>
@@ -42,13 +52,16 @@
                         }
                         else
                         {
-                            <td><img src="~/Image/DefaultImage.jpg" id="imgUsuario" width="100" height="100" /></td>
+                            <td><img src="https://png.pngtree.com/png-vector/20191009/ourmid/pngtree-user-icon-png-image_1796659.jpg" id="imgUsuario" width="100" height="100" /></td>
                         }
-                        <td class="text-center">
-                            <a class="btn" href="#">
-                                <i class="fa-solid fa-trash fa-xl" style="font-size: 1.7rem; color: #b70000;"></i>
-                            </a>
+                        <td>
+                            <a class="btn btn-danger bi bi-trash" href="@Url.Action("Delete", "Autor", new { IdAutor= usuario.IdAutor})" onclick="return confirm('Estas seguro que deseas eliminar este registro?');"></a>
                         </td>
+                       @* <td class="text-center">
+                            <a class="btn" href="@Url.Action("Delete", "Autor", new{IdAutor = usuario.IdAutor})">
+                                <i class="fa-solid fa-trash fa-xl" style="font-size: 1.7rem; color: #b70000;">Eliminar</i>
+                            </a>
+                </td>*@
 
                     </tr>
                 }
