--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" asp-area="" asp-controller="Editorial" asp-action="GetAll">Editoriales</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-area="" asp-controller="Medio" asp-action="GetAll">Medios</a>
+                        </li>
                     </ul>
                     @*  @if (signInMannager.IsSignedIn(User))
                     {
