--- a/PL/Views/Autor/GetAll.cshtml
+++ b/PL/Views/Autor/GetAll.cshtml
@@ -5,68 +5,71 @@
 @{
 }
 
-
-<div class="text-center m-2">
-    <h1>Autores</h1>
-    <hr />
-    <a class="btn btn-success" href="@Url.Action("Form", "Autor")"> Agregar Autor </a>
-</div>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-@if (Model.Autores != null && Model.Autores.Count > 0)
-{
-    <div class="table-responsive">
-        <table class="table" id="tablaUsuarios">
-            <thead>
-                <tr>
-                    <th scope="col" class="text-center">Editar</th>
-                    <th scope="col" class="text-center">Nombre Completo</th>
-                    <th scope="col" class="text-center">Fecha de nacimiento </th>
-                    <th scope="col" class="text-center">Foto </th>
-                    <th scope="col" class="text-center">Eliminar</th>
-                </tr>
-            </thead>
-            <tbody class="table-group-divider">
-                @foreach (ML.Autor usuario in Model.Autores)
-                {
-
-                    <tr class="align-middle">
-                        <td class="text-center">
-                            <a class="btn btn-info bi bi-pencil" href="@Url.Action("Form", "Autor", new { IdAutor= usuario.IdAutor})" ></a>
-                           @* <a class="btn" href="@Url.Action("Form", "Autor", new{IdAutor = usuario.IdAutor})">
-                                <i class="fa-solid fa-pen-to-square fa-lg" style="font-size: 1.7rem; color: #000000;">Editar</i>
-                    </a>*@
-                        </td>
-                        <td class="text-center">@usuario.Nombre @usuario.ApellidoPaterno @usuario.ApellidoMaterno</td>
-                        <td class="text-center">@usuario.FechaNacimiento</td>
-                        @if (usuario.Foto != null)
-                        {
-                            <td><img id="imgUsuario" src="data:image/jpeg;base64,@Convert.ToBase64String(usuario.Foto)" width="100" height="100" /></td>
-                        }
-                        else
-                        {
-                            <td><img src="https://png.pngtree.com/png-vector/20191009/ourmid/pngtree-user-icon-png-image_1796659.jpg" id="imgUsuario" width="100" height="100" /></td>
-                        }
-                        <td>
-                            <a class="btn btn-danger bi bi-trash" href="@Url.Action("Delete", "Autor", new { IdAutor= usuario.IdAutor})" onclick="return confirm('Estas seguro que deseas eliminar este registro?');"></a>
-                        </td>
-                       @* <td class="text-center">
-                            <a class="btn" href="@Url.Action("Delete", "Autor", new{IdAutor = usuario.IdAutor})">
-                                <i class="fa-solid fa-trash fa-xl" style="font-size: 1.7rem; color: #b70000;">Eliminar</i>
-                            </a>
-                </td>*@
-
-                    </tr>
-                }
-            </tbody>
-        </table>
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+            <h1 style="font:bold">Lista de Autores</h1>
+            <br />
+        </div>
     </div>
+    <div class="row">
+        <div class="col-md-2 ms-auto">
+            <a class="btn btn-success" href="@Url.Action("Form", "Autor")">Agregar Autor</a>
+        </div>
+    </div>
+    <br>
+    <br />
+    @if (Model.Autores != null && Model.Autores.Count > 0)
+    {
+        <div class="table-responsive">
+            <table class="table" id="tablaUsuarios">
+                <thead>
+                    <tr>
+                        <th scope="col" class="text-center">Editar</th>
+                        <th scope="col" class="text-center">Nombre Completo</th>
+                        <th scope="col" class="text-center">Fecha de nacimiento </th>
+                        <th scope="col" class="text-center">Foto </th>
+                        <th scope="col" class="text-center">Eliminar</th>
+                    </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                    @foreach (ML.Autor usuario in Model.Autores)
+                    {
 
-}
+                        <tr class="align-middle">
+                            <td class="text-center">
+                                <a class="btn btn-info bi bi-pencil" href="@Url.Action("Form", "Autor", new { IdAutor= usuario.IdAutor})"></a>
+                                @* <a class="btn" href="@Url.Action("Form", "Autor", new{IdAutor = usuario.IdAutor})">
+                        <i class="fa-solid fa-pen-to-square fa-lg" style="font-size: 1.7rem; color: #000000;">Editar</i>
+                        </a>*@
+                            </td>
+                            <td class="text-center">@usuario.Nombre @usuario.ApellidoPaterno @usuario.ApellidoMaterno</td>
+                            <td class="text-center">@usuario.FechaNacimiento</td>
+                            @if (usuario.Foto != null)
+                            {
+                                <td><img id="imgUsuario" src="data:image/jpeg;base64,@Convert.ToBase64String(usuario.Foto)" width="100" height="100" /></td>
+                            }
+                            else
+                            {
+                                <td><img src="https://png.pngtree.com/png-vector/20191009/ourmid/pngtree-user-icon-png-image_1796659.jpg" id="imgUsuario" width="100" height="100" /></td>
+                            }
+                            <td>
+                                <a class="btn btn-danger bi bi-trash" href="@Url.Action("Delete", "Autor", new { IdAutor= usuario.IdAutor})" onclick="return confirm('Estas seguro que deseas eliminar este registro?');"></a>
+                            </td>
+                            @* <td class="text-center">
+                    <a class="btn" href="@Url.Action("Delete", "Autor", new{IdAutor = usuario.IdAutor})">
+                    <i class="fa-solid fa-trash fa-xl" style="font-size: 1.7rem; color: #b70000;">Eliminar</i>
+                    </a>
+                    </td>*@
+
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-danger" role="alert">No hay autores registrados</div>
+    }
+</div>
