--- a/PL/Views/Medio/Form.cshtml
+++ b/PL/Views/Medio/Form.cshtml
@@ -24,7 +24,7 @@
             <br />
         </div>
     </div>
-    @using (Html.BeginForm("Form","Medio",FormMethod.Post,new{ enctype = "multipart/form-data"}))
+    @using (Html.BeginForm("Form", "Medio", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         <div class="row">
             <div class="col-md">
@@ -56,20 +56,20 @@
             <div class="col-md">
                 @Html.LabelFor(model => model.Imagen)
                 <br />
-                <input type="file" id="fuImagen" name="fuImagen" onchange="PreviewImagen(event)"/>
-                @if(Model.Imagen == null)
+                <input type="file" id="fuImagen" name="fuImagen" onchange="PreviewImagen(event)" />
+                @if (Model.Imagen == null)
                 {
-                    <img src="https://static.vecteezy.com/system/resources/previews/023/985/139/non_2x/school-materials-clip-art-cartoon-books-free-png.png" style="height:100px; width:100px;"/>
+                    <img src="https://static.vecteezy.com/system/resources/previews/023/985/139/non_2x/school-materials-clip-art-cartoon-books-free-png.png" id="imgUsuario" style="height:100px; width:100px;" />
                 }
                 else
                 {
-                    <img id="imgMedio" src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen)" style="width:100px; height:100px"/>
+                    <img id="imgUsuario" src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen)" style="width:100px; height:100px" />
                 }
                 @Html.HiddenFor(model => model.Imagen)
             </div>
             <div class="col-md">
                 @Html.LabelFor(model => model.TipoMedio)
-                @if(Model.TipoMedio.TipoMedios != null)
+                @if (Model.TipoMedio.TipoMedios != null)
                 {
                     @Html.DropDownListFor(model => model.TipoMedio.IdTipoMedio, new SelectList(Model.TipoMedio.TipoMedios, "IdTipoMedio", "Nombre"), "Selecciona un TipoMedio", new {@class = "form-control"})
                 }
@@ -80,7 +80,7 @@
             </div>
             <div class="col-md">
                 @Html.LabelFor(model => model.Editorial)
-                @if(Model.Editorial.Editoriales != null)
+                @if (Model.Editorial.Editoriales != null)
                 {
                     @Html.DropDownListFor(model => model.Editorial.IdEditorial, new SelectList(Model.Editorial.Editoriales, "IdEditorial","Nombre"), "Seleccione una Editorial", new {@class = "form-control"} )
                 }
@@ -120,10 +120,22 @@
         <br />
         <div class="row">
             <div class="col-md">
-                <input type="submit" class = "btn btn-success" value="Agregar"/>
+                <input type="submit" class="btn btn-success" value="Agregar" />
                 <a class="btn btn-danger" asp-action="GetAll" asp-controller="Medio">Regresar</a>
             </div>
         </div>
     }
 </div>
 
+<script src="~/Scripts/jquery-3.4.1.js"></script>
+
+<script type="text/javascript">
+
+    function PreviewImagen(event) {
+        var output = document.getElementById('imgUsuario');
+        output.src = URL.createObjectURL(event.target.files[0]);
+        output.onload = function () {
+            URL.revokeObjectURL(output.src)
+        }
+    }
+</script>
