modulo prestamo, sacar libro devolver libro con modificacion de la cantidad disponible

--- a/PL/Views/Prestamo/GetAll.cshtml
+++ b/PL/Views/Prestamo/GetAll.cshtml
@@ -11,12 +11,12 @@
             <br />
         </div>
     </div>
-  @*  <div class="row">
+   <div class="row">
         <div class="col-md-1 ms-auto">
-            <a class="btn btn-success" asp-action="Form" asp-controller="Medio">Agregar</a>
+            <a class="btn btn-success" asp-action="MediosPrestados" asp-controller="Prestamo">Medios en prestamo</a>
             <br />
         </div>
-    </div>*@
+    </div>
     <br />
     @if (Model.Medios != null && Model.Medios.Count > 0)
     {
